<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.doan.tuvantuyensinh.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_news"
            app:destination="@id/navigation_news" />
        <action
            android:id="@+id/action_navigation_home_to_undevelopFragment"
            app:destination="@id/undevelopFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_chat"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_navigation_home_to_more_function_fragment"
            app:destination="@id/more_function_fragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_school_info"
            app:destination="@id/navigation_school_info" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_job"
            app:destination="@id/navigation_job" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_scholarship"
            app:destination="@id/navigation_scholarship" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_tuition"
            app:destination="@id/navigation_tuition" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_target"
            app:destination="@id/navigation_target" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.doan.tuvantuyensinh.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.doan.tuvantuyensinh.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_navigation_news_to_newsDetailFragment"
            app:destination="@id/news_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_school_info"
        android:name="com.doan.tuvantuyensinh.ui.school.SchoolInfoFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_school_info" />

    <fragment
        android:id="@+id/news_detail_fragment"
        android:name="com.doan.tuvantuyensinh.ui.news.NewsDetailFragment"
        android:label="News Detail Fragment">
    </fragment>

    <fragment android:id="@+id/navigation_chat"
        android:name="com.doan.tuvantuyensinh.ui.chatbot.ChatBotFragment"
        android:label="Chat Fragment">

    </fragment>

    <fragment
        android:id="@+id/undevelopFragment"
        android:name="com.doan.tuvantuyensinh.ui.underdevelop.UnDevelopFragment"
        android:label="Undevelop Fragment">
    </fragment>

    <fragment
        android:id="@+id/more_function_fragment"
        android:name="com.doan.tuvantuyensinh.ui.more.MoreFunctionFragment"
        android:label="More Function Fragment">
    </fragment>

    <fragment
        android:id="@+id/navigation_job"
        android:name="com.doan.tuvantuyensinh.ui.job.JobFragment"
        android:label="@string/title_job"
        tools:layout="@layout/fragment_job" >

    </fragment>

    <fragment
        android:id="@+id/navigation_scholarship"
        android:name="com.doan.tuvantuyensinh.ui.scholarship.ScholarshipFragment"
        android:label="@string/title_scholarship"
        tools:layout="@layout/fragment_scholarship" />

    <fragment
        android:id="@+id/navigation_tuition"
        android:name="com.doan.tuvantuyensinh.ui.tuition.TuitionFragment"
        android:label="@string/title_tuition"
        tools:layout="@layout/fragment_tuition" />

    <fragment
        android:id="@+id/navigation_target"
        android:name="com.doan.tuvantuyensinh.ui.target.TargetFragment"
        android:label="@string/title_target"
        tools:layout="@layout/fragment_target" />
</navigation>